--- a/about.html
+++ b/about.html
@@ -430,10 +430,11 @@
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="lib/isotope/isotope.pkgd.min.js"></script>
     <script src="lib/lightbox/js/lightbox.min.js"></script>
-    <script src="js/footeremail.js"></script>
-
+    
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
     <script src="js/progressbar.js"></script>
+    <script src="js/footeremail.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </body>
 </html>
