--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
         <div class="container py-5 px-lg-5">
           <div class="row justify-content-center">
             <div class="col-lg-7 text-center">
-              <p class="text-white mb-4">ayzenntechnologies@gmail.com</p>
+              <p class="text-white mb-4">official@ayzenntechnologies.com</p>
               <div class="position-relative w-100 mt-3">
                 <form id="contactmail">
                   <input
@@ -526,6 +526,28 @@
         </div>
       </div>
 
+          <!-- Success Modal -->
+<div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="successModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content text-center">
+      <div class="modal-header border-0">
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="d-flex flex-column align-items-center">
+          <div  class=" text-white rounded-circle d-flex align-items-center justify-content-center" style=" background-color: #fba504; width: 50px; height: 50px;">
+            ✔
+          </div>
+          <h4 class="mt-3">Success</h4>
+          <p>Email sent successfully. We'll see you soon!</p>
+        </div>
+      </div>
+      <div class="modal-footer border-0">
+        <button type="button" class="btn btn-dark w-100" data-bs-dismiss="modal">OK</button>
+      </div>
+    </div>
+  </div>
+</div>
       
       <!-- Newsletter End -->
 
