Added medvox updated members

--- a/project.html
+++ b/project.html
@@ -129,6 +129,26 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item first wow fadeInUp" data-wow-delay="0.1s" data-category="web">
+                        <div class="rounded overflow-hidden">
+                            <div class="position-relative overflow-hidden">
+                                <img class="img-fluid w-100" src="img/medvox.png" alt="medvoxai">
+                                <div class="portfolio-overlay">
+                                    <!-- <a class="btn btn-square btn-outline-light mx-1" href="img/Pro-3.png" data-lightbox="portfolio"><i class="fa fa-eye"></i></a> -->
+                                    <a class="btn btn-square btn-outline-light mx-1" href="https://medvoxai.com" target="_blank"><i class="fa fa-link"></i></a>
+                                </div>
+                            </div>
+                            <div class="box bg-light p-4" style="height: auto;">
+                                <h5 class="fw-medium mb-2" style="color:#000000;font-family: 'Poppins', sans-serif;">MedVox AI</h5>
+                                <!-- <h5 class="lh-base short-text">ToneSync is an AI-driven platform that transforms Quality Assurance (QA) for customer-business calls.</h5> -->
+                                <h5 class="lh-base full-text" style="display: none;">
+                                    MedVox makes medical information easy to understand by translating prescriptions, reports, and instructions into clear language. It empowers patients and families to manage healthcare confidently, reducing confusion, delays, and risks—especially for rural communities, the elderly, and non-native speakers.
+    
+                                </h5>
+                                <button class="see-more-btn" onclick="toggleText(this)">See More</button>
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item first wow fadeInUp" data-wow-delay="0.1s" data-category="mobile">
                         <div class="rounded overflow-hidden">
