--- a/team.html
+++ b/team.html
@@ -142,7 +142,7 @@
                     src="img/umair.jpg"
                     alt="Umair Pic"
                   />
-                  <h5>Umair Ali</h5>
+                  <h5>Umair Arshad</h5>
                   <span>CEO</span>
                 </div>
                 <div class="d-flex justify-content-center p-4">
@@ -171,28 +171,6 @@
                   <a
                     class="btn btn-square mx-1"
                     href="https://www.linkedin.com/in/sudo-tahir-saeed?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
-                    target="_blank"
-                    ><i class="fab fa-linkedin-in"></i
-                  ></a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-              <div class="team-item bg-light rounded">
-                <div class="text-center border-bottom p-4">
-                  <img
-                    class="img-fluid rounded-circle mb-4"
-                    src="img/hamid.jpeg"
-                    alt="Hamid Pic"
-                  />
-                  <h5>Hamid Ali</h5>
-                  <span>HR Manager</span>
-                </div>
-                <div class="d-flex justify-content-center p-4">
-                  <a
-                    class="btn btn-square mx-1"
-                    href="https://www.linkedin.com/in/hamid-ali-918380343?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
                     target="_blank"
                     ><i class="fab fa-linkedin-in"></i
                   ></a>
@@ -237,50 +215,6 @@
                   <a
                     class="btn btn-square mx-1"
                     href="https://www.linkedin.com/in/syed-adan-murad-shah-16925a279?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
-                    target="_blank"
-                    ><i class="fab fa-linkedin-in"></i
-                  ></a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-              <div class="team-item bg-light rounded">
-                <div class="text-center border-bottom p-4">
-                  <img
-                    class="img-fluid rounded-circle mb-4"
-                    src="img/haseeb.jpeg"
-                    alt="Haseeb Pic"
-                  />
-                  <h5>Haseeb Salman Khan</h5>
-                  <span>Full Stack Intern</span>
-                </div>
-                <div class="d-flex justify-content-center p-4">
-                  <a
-                    class="btn btn-square mx-1"
-                    href="https://www.linkedin.com/in/haseeb-khan-32934b261?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
-                    target="_blank"
-                    ><i class="fab fa-linkedin-in"></i
-                  ></a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-              <div class="team-item bg-light rounded">
-                <div class="text-center border-bottom p-4">
-                  <img
-                    class="img-fluid rounded-circle mb-4"
-                    src="img/maaz.jpeg"
-                    alt="Maaz Pic"
-                  />
-                  <h5>Maaz</h5>
-                  <span>UI/UX Designer</span>
-                </div>
-                <div class="d-flex justify-content-center p-4">
-                  <a
-                    class="btn btn-square mx-1"
-                    href="https://www.linkedin.com/in/maaz-bin-tariq-a96b30281?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
                     target="_blank"
                     ><i class="fab fa-linkedin-in"></i
                   ></a>
@@ -357,8 +291,7 @@
                 To Get Our Latest Updates.
               </p>
               <div class="position-relative w-100 mt-3">
-                <form id="contactmailfooter"
-                >
+                <form id="contactmailfooter">
                   <input
                     class="form-control border-0 rounded-pill w-100 ps-4 pe-5"
                     required
