--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     />
 
     <!-- Bootstrap CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <meta
       name="keywords"
       content="Web development, App development, AI development, Management Systems, School Portals, College Portals, POS Systems, Software Solutions"
@@ -526,29 +529,49 @@
         </div>
       </div>
 
-          <!-- Success Modal -->
-<div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="successModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content text-center">
-      <div class="modal-header border-0">
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <div class="d-flex flex-column align-items-center">
-          <div  class=" text-white rounded-circle d-flex align-items-center justify-content-center" style=" background-color: #fba504; width: 50px; height: 50px;">
-            ✔
+      <!-- Success Modal -->
+      <div
+        class="modal fade"
+        id="successModal"
+        tabindex="-1"
+        aria-labelledby="successModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content text-center">
+            <div class="modal-header border-0">
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <div class="d-flex flex-column align-items-center">
+                <div
+                  class="text-white rounded-circle d-flex align-items-center justify-content-center"
+                  style="background-color: #fba504; width: 50px; height: 50px"
+                >
+                  ✔
+                </div>
+                <h4 class="mt-3">Success</h4>
+                <p>Email sent successfully. We'll see you soon!</p>
+              </div>
+            </div>
+            <div class="modal-footer border-0">
+              <button
+                type="button"
+                class="btn btn-dark w-100"
+                data-bs-dismiss="modal"
+              >
+                OK
+              </button>
+            </div>
           </div>
-          <h4 class="mt-3">Success</h4>
-          <p>Email sent successfully. We'll see you soon!</p>
         </div>
       </div>
-      <div class="modal-footer border-0">
-        <button type="button" class="btn btn-dark w-100" data-bs-dismiss="modal">OK</button>
-      </div>
-    </div>
-  </div>
-</div>
-      
+
       <!-- Newsletter End -->
 
       <!-- Projects Start -->
@@ -612,6 +635,51 @@
                     performance scores for Customer Service Representatives.
                     This efficiency not only accelerates feedback but also
                     delivers actionable insights for improving quality.
+                  </h5>
+                  <button class="see-more-btn" onclick="toggleText(this)">
+                    See More
+                  </button>
+                </div>
+              </div>
+            </div>
+
+            <div
+              class="col-lg-4 col-md-6 portfolio-item first wow fadeInUp"
+              data-wow-delay="0.1s"
+              data-category="web"
+            >
+              <div class="rounded overflow-hidden">
+                <div class="position-relative overflow-hidden">
+                  <img
+                    class="img-fluid w-100"
+                    src="img/medvox.png"
+                    alt="medvox"
+                  />
+                  <div class="portfolio-overlay">
+                    <!-- <a class="btn btn-square btn-outline-light mx-1" href="img/Pro-3.png" data-lightbox="portfolio"><i class="fa fa-eye"></i></a> -->
+                    <a
+                      class="btn btn-square btn-outline-light mx-1"
+                      href="https://medvoxai.com"
+                      target="_blank"
+                      ><i class="fa fa-link"></i
+                    ></a>
+                  </div>
+                </div>
+                <div class="box bg-light p-4" style="height: auto">
+                  <h5
+                    class="fw-medium mb-2"
+                    style="color: #000000; font-family: 'Poppins', sans-serif"
+                  >
+                    MedVox AI
+                  </h5>
+                  <!-- <h5 class="lh-base short-text">ToneSync is an AI-driven platform that transforms Quality Assurance (QA) for customer-business calls.</h5> -->
+                  <h5 class="lh-base full-text" style="display: none">
+                    MedVox makes medical information easy to understand by
+                    translating prescriptions, reports, and instructions into
+                    clear language. It empowers patients and families to manage
+                    healthcare confidently, reducing confusion, delays, and
+                    risks—especially for rural communities, the elderly, and
+                    non-native speakers.
                   </h5>
                   <button class="see-more-btn" onclick="toggleText(this)">
                     See More
@@ -872,8 +940,9 @@
                   class="fa fa-quote-left fa-4x mt-n4 me-3"
                   style="color: #fba504"
                 ></i
-                >"We engaged Ayzenn Technologies to develop an AI-based system for our quality assurance. They are highly professional, and their team is exceptionally skilled."
-
+                >"We engaged Ayzenn Technologies to develop an AI-based system
+                for our quality assurance. They are highly professional, and
+                their team is exceptionally skilled."
               </p>
               <div class="d-flex align-items-center">
                 <img
@@ -895,8 +964,9 @@
                   class="fa fa-quote-left fa-4x mt-n4 me-3"
                   style="color: #fba504"
                 ></i
-                >"We've collaborated with Ayzenn Technologies on multiple projects. Their professionalism stands out, and their work on Rapid Engine was excellent."
-
+                >"We've collaborated with Ayzenn Technologies on multiple
+                projects. Their professionalism stands out, and their work on
+                Rapid Engine was excellent."
               </p>
               <div class="d-flex align-items-center">
                 <img
@@ -907,8 +977,7 @@
                 />
                 <div class="ps-4">
                   <h5 class="mb-1">Muhammad Hassan</h5>
-                  <span>Rapid Engine
-                  </span>
+                  <span>Rapid Engine </span>
                 </div>
               </div>
             </div>
@@ -919,7 +988,9 @@
                   class="fa fa-quote-left fa-4x mt-n4 me-3"
                   style="color: #fba504"
                 ></i
-                >"Partnering with Ayzenn Technologies, we successfully delivered several projects in South Korea, including work for the Korean government. Their expertise is remarkable."
+                >"Partnering with Ayzenn Technologies, we successfully delivered
+                several projects in South Korea, including work for the Korean
+                government. Their expertise is remarkable."
               </p>
               <div class="d-flex align-items-center">
                 <img
@@ -993,28 +1064,6 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-              <div class="team-item bg-light rounded">
-                <div class="text-center border-bottom p-4">
-                  <img
-                    class="img-fluid rounded-circle mb-4"
-                    src="img/hamid.jpeg"
-                    alt="Hamid Pic"
-                  />
-                  <h5>Hamid Ali</h5>
-                  <span>HR Manager</span>
-                </div>
-                <div class="d-flex justify-content-center p-4">
-                  <a
-                    class="btn btn-square mx-1"
-                    href="https://www.linkedin.com/in/hamid-ali-918380343?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
-                    target="_blank"
-                    ><i class="fab fa-linkedin-in"></i
-                  ></a>
-                </div>
-              </div>
-            </div>
-
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
               <div class="team-item bg-light rounded">
                 <div class="text-center border-bottom p-4">
@@ -1052,50 +1101,6 @@
                   <a
                     class="btn btn-square mx-1"
                     href="https://www.linkedin.com/in/syed-adan-murad-shah-16925a279?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
-                    target="_blank"
-                    ><i class="fab fa-linkedin-in"></i
-                  ></a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-              <div class="team-item bg-light rounded">
-                <div class="text-center border-bottom p-4">
-                  <img
-                    class="img-fluid rounded-circle mb-4"
-                    src="img/haseeb.jpeg"
-                    alt="Haseeb Pic"
-                  />
-                  <h5>Haseeb Salman Khan</h5>
-                  <span>Full Stack Intern</span>
-                </div>
-                <div class="d-flex justify-content-center p-4">
-                  <a
-                    class="btn btn-square mx-1"
-                    href="https://www.linkedin.com/in/haseeb-khan-32934b261?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
-                    target="_blank"
-                    ><i class="fab fa-linkedin-in"></i
-                  ></a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-              <div class="team-item bg-light rounded">
-                <div class="text-center border-bottom p-4">
-                  <img
-                    class="img-fluid rounded-circle mb-4"
-                    src="img/maaz.jpeg"
-                    alt="Maaz Pic"
-                  />
-                  <h5>Maaz</h5>
-                  <span>UI/UX Designer</span>
-                </div>
-                <div class="d-flex justify-content-center p-4">
-                  <a
-                    class="btn btn-square mx-1"
-                    href="https://www.linkedin.com/in/maaz-bin-tariq-a96b30281?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
                     target="_blank"
                     ><i class="fab fa-linkedin-in"></i
                   ></a>
@@ -1183,8 +1188,7 @@
                 To Get Our Latest Updates.
               </p>
               <div class="position-relative w-100 mt-3">
-                <form id="contactmailfooter"
-                >
+                <form id="contactmailfooter">
                   <input
                     class="form-control border-0 rounded-pill w-100 ps-4 pe-5"
                     required
