Updated Shair Ali

--- a/team.html
+++ b/team.html
@@ -183,16 +183,16 @@
                 <div class="text-center border-bottom p-4">
                   <img
                     class="img-fluid rounded-circle mb-4"
-                    src="img/rehan.jpeg"
-                    alt="Rehan Pic"
+                    src="img/shairAli.jpg"
+                    alt="Shair Ali Pic"
                   />
-                  <h5>Rehan Nasir</h5>
-                  <span>Backend Developer</span>
+                  <h5>Shair Ali</h5>
+                  <span>Project Manager</span>
                 </div>
                 <div class="d-flex justify-content-center p-4">
                   <a
                     class="btn btn-square mx-1"
-                    href="https://www.linkedin.com/in/rana-rehan-nasir-558920267/"
+                    href="https://www.linkedin.com/"
                     target="_blank"
                     ><i class="fab fa-linkedin-in"></i
                   ></a>
